# android-offline-transcribe

./: .gitignore  .gitmodules  CLAUDE.md  README.md
.github/workflows/: android-build.yml  main.yml
OfflineTranscriptionAndroid/app/: build.gradle.kts
OfflineTranscriptionAndroid/app/src/androidTest/kotlin/com/jima/offlinetranscription/e2e/: AllModelsE2ETest.kt  UserFlowE2ETest.kt
OfflineTranscriptionAndroid/app/src/main/cpp/: whisper_jni.cpp
OfflineTranscriptionAndroid/app/src/main/kotlin/com/jima/offlinetranscription/: MainActivity.kt
OfflineTranscriptionAndroid/app/src/main/kotlin/com/jima/offlinetranscription/data/: AppPreferences.kt
OfflineTranscriptionAndroid/app/src/main/kotlin/com/jima/offlinetranscription/model/: AppError.kt  ModelInfo.kt
OfflineTranscriptionAndroid/app/src/main/kotlin/com/jima/offlinetranscription/service/: SherpaOnnxEngine.kt  SherpaOnnxStreamingEngine.kt  WhisperEngine.kt
OfflineTranscriptionAndroid/app/src/main/kotlin/com/jima/offlinetranscription/ui/setup/: ModelSetupScreen.kt
OfflineTranscriptionAndroid/app/src/main/kotlin/com/jima/offlinetranscription/ui/transcription/: TranscriptionScreen.kt  TranscriptionViewModel.kt
OfflineTranscriptionAndroid/app/src/main/res/values/: strings.xml
OfflineTranscriptionAndroid/app/src/test/kotlin/com/jima/offlinetranscription/model/: AppErrorTest.kt
VoicePingAndroidOfflineTranscribe/: settings.gradle.kts
VoicePingAndroidOfflineTranscribe/app/: build.gradle.kts  proguard-rules.pro
VoicePingAndroidOfflineTranscribe/app/src/androidTest/kotlin/com/jima/offlinetranscription/e2e/: AllModelsE2ETest.kt  UserFlowE2ETest.kt
VoicePingAndroidOfflineTranscribe/app/src/androidTest/kotlin/com/jima/offlinetranscription/service/: AllModelsTranscribeTest.kt
VoicePingAndroidOfflineTranscribe/app/src/main/: AndroidManifest.xml
VoicePingAndroidOfflineTranscribe/app/src/main/cpp/: CMakeLists.txt  qwen_asr_jni.cpp  qwen_onnx_jni.cpp  whisper_jni.c  whisper_jni.cpp
VoicePingAndroidOfflineTranscribe/app/src/main/kotlin/com/jima/offlinetranscription/: MainActivity.kt  OfflineTranscriptionApp.kt
VoicePingAndroidOfflineTranscribe/app/src/main/kotlin/com/jima/offlinetranscription/data/: AppPreferences.kt
VoicePingAndroidOfflineTranscribe/app/src/main/kotlin/com/jima/offlinetranscription/model/: AppError.kt  ModelInfo.kt
VoicePingAndroidOfflineTranscribe/app/src/main/kotlin/com/jima/offlinetranscription/service/: AndroidSpeechEngine.kt  AsrEngine.kt  AudioRecorder.kt  CactusEngine.kt  E2ETestOrchestrator.kt  MlKitTranslator.kt  ModelDownloader.kt  QwenASREngine.kt  QwenASRLib.kt  QwenOnnxEngine.kt  QwenOnnxLib.kt  SherpaOnnxEngine.kt  SherpaOnnxStreamingEngine.kt  StreamingChunkManager.kt  TranscriptionCoordinator.kt  WhisperCppLib.kt  WhisperEngine.kt
VoicePingAndroidOfflineTranscribe/app/src/main/kotlin/com/jima/offlinetranscription/ui/navigation/: AppNavigation.kt
VoicePingAndroidOfflineTranscribe/app/src/main/kotlin/com/jima/offlinetranscription/ui/setup/: ModelSetupScreen.kt
VoicePingAndroidOfflineTranscribe/app/src/main/kotlin/com/jima/offlinetranscription/ui/transcription/: TranscriptionScreen.kt  TranscriptionViewModel.kt
VoicePingAndroidOfflineTranscribe/app/src/main/res/values/: strings.xml
VoicePingAndroidOfflineTranscribe/app/src/test/kotlin/com/jima/offlinetranscription/model/: ModelInfoTest.kt
VoicePingAndroidOfflineTranscribe/app/src/test/kotlin/com/jima/offlinetranscription/service/: AsrEngineTest.kt  CactusEngineTest.kt  ModelDownloaderTest.kt
VoicePingAndroidOfflineTranscribe/gradle/: libs.versions.toml
VoicePingAndroidOfflineTranscribe/qwen-asr/: qwen_asr_onnx.c  qwen_asr_onnx.h
scripts/: android-e2e-test.sh  android-userflow-test.sh  ci-android-unit-test.sh  generate-inference-report.py  run-inference-benchmarks.sh
